MCRM-32: Lead listing
